# coragames

./: .gitignore  Cargo.toml  README.md  TODO.md
crates/cora_gameagent/: Cargo.toml  build.rs
crates/cora_gameagent/proto/: status_service.proto
crates/cora_gameagent/src/: main.rs  status_service.rs
crates/cora_gameclient/: Cargo.toml
crates/cora_gameplay/: Cargo.toml
crates/cora_gameplay/src/: action.rs  combat.rs  config.rs  game.rs  grid_cell.rs  grid_config.rs  grid_coordinate.rs  grid_map.rs  grid_unit.rs  lib.rs  movement.rs  player.rs  playerstat.rs  spawn.rs  terrain.rs  turn.rs  unit.rs  vision.rs  world.rs
crates/cora_gameserver/: Cargo.toml
crates/cora_gameserver/src/: main.rs
crates/cora_gameserver/src/components/: health.rs
crates/cora_gameserver/src/entities/: unit.rs
crates/cora_gameserver/src/plugins/: gameplay.rs
crates/cora_gameserver/src/resources/: turn_timer.rs
crates/cora_gameserver/src/systems/: game_turns.rs  mod.rs
crates/cora_grid/: Cargo.toml
crates/cora_grid/src/: config.rs  coordinate.rs  direction.rs  grid.rs  lib.rs  square_grid_2d.rs
src/: main.rs
